# mcfa

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.org  pyproject.toml  setup.py
docs/: 4d_gaussian.ipynb  documentation.ipynb
mcfa/: __init__.py  core.py  examples.py  figures.py
